# esp32

./: .gitignore  cert.md  chum.md  esp32.md  keys.json  partitions.csv  partitions_custom.csv  platformio.ini  siop.md  storage.md  stuff.txt  test_credential.json  test_credential_signed.json
doc/: crypto.md  esp32-auth-summary.md  esp32-mutual-auth.ts  esp32-quic.ts
lib/one_crypto/: CMakeLists.txt  build.sh  library.json
lib/one_crypto/examples/: mac_tool.cpp
lib/one_crypto/src/: one_crypto.cpp  one_crypto.h
src/: main.cpp  uart_bridge.cpp  uart_ox64.cpp  wireless_test.cpp
src/chum/: common_types.h  config.h.template  connection.cpp  connection.h  message_serializer.cpp  message_serializer.h  peer_manager.cpp  peer_manager.h  security.cpp  security.h  trusted_keys_manager.cpp  trusted_keys_manager.h  types.h  websocket_client.cpp  websocket_client.h  websocket_client_impl.cpp  websocket_client_impl.h  websocket_types.h  websocket_wrapper.cpp  websocket_wrapper.h
src/display/: display_constants.h  display_manager.cpp  display_manager.h
src/instance/: ble_discovery.cpp  ble_discovery.h  credential.cpp  credential.h  credential_manager.cpp  credential_manager.h  crypto_constants.h  esp32_crypto.cpp  esp32_crypto.h  instance.cpp  instance.h  keys.cpp  keys.h  keys_storage.h  owner_storage.h  secure_storage.h
src/storage/: filesystem.cpp  filesystem.h  storage_base.cpp  storage_base.h  (+2 more)
test/: test_filesystem.cpp  test_storage_base.cpp  test_storage_integration.cpp  test_storage_streams.cpp  test_trusted_keys_manager.cpp
uart_bridge/: platformio.ini
(+1 files in other folders)
